[gd_scene load_steps=6 format=3 uid="uid://by51f2wg82jgi"]

[ext_resource type="PackedScene" uid="uid://bdci0o320d4wj" path="res://Scene/Fires/TorchBlue.tscn" id="1_baqm6"]
[ext_resource type="Script" path="res://Scene/Tourch/TheRealTourch.gd" id="1_k0868"]
[ext_resource type="Texture2D" uid="uid://bw4vwyagb8qsn" path="res://Art/light.png" id="3_yyap6"]

[sub_resource type="CircleShape2D" id="CircleShape2D_s38y7"]
radius = 12.2807

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lx7gi"]
size = Vector2(14, 28)

[node name="Torch" type="Node2D"]
script = ExtResource("1_k0868")

[node name="TorchAnimation" parent="." instance=ExtResource("1_baqm6")]
scale = Vector2(3.5, 5.5)
script = null

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(0, 19)
scale = Vector2(2.5, 3.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -2.38419e-07)
scale = Vector2(1.368, 1)
shape = SubResource("CircleShape2D_s38y7")

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(0, 13)
enabled = false
color = Color(0, 0.596078, 1, 0.929412)
texture = ExtResource("3_yyap6")
texture_scale = 5.0

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, 25)
shape = SubResource("RectangleShape2D_lx7gi")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
